# codspeed-go

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md  cliff.toml  dist-workspace.toml  flake.nix  go.mod  go.sum
codspeed-cli/: go.mod  (+1 more)
go-runner/: .gitignore  Cargo.toml
go-runner/benches/: go_runner.rs
go-runner/docs/: test-execution-strategy.md
go-runner/overlay/: README.md  benchmark.go  benchmark1.24.0.go  benchmark1.24.0.patch  benchmark1.25.0.go  benchmark1.25.0.patch  codspeed.go  instrument-hooks.go  update-patch.sh
go-runner/src/: cli.rs  integration_tests.rs  lib.rs  main.rs  prelude.rs  runner.rs  utils.rs
go-runner/src/builder/: discovery.rs  mod.rs  patcher.rs  template.go  templater.rs  verifier.rs
go-runner/src/results/: mod.rs  raw_result.rs  walltime_results.rs
go-runner/src/runner/: mod.rs
go-runner/src/snapshots/: codspeed_go_runner__integration_tests__assert_results_snapshots@caddy.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@cli-runtime.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-external-test-unexported-access.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-logr-type-mismatch.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-dot-go-folder.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-excluded-names.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-helper.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-main.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-replace.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-test-package.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-testify.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example-with-vendor.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@example_0.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@fuego.snap  codspeed_go_runner__integration_tests__assert_results_snapshots@fzf.snap  (+57 more)
go-runner/tests/: error_file.rs  pkg_arg.rs  utils.rs
(+317 files in other folders)
