[package]
name = "codspeed-go-runner"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed-go"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
gosyn = "0.2"
handlebars = "6.3"
itertools = "0.14"
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = { version = "0.18", default-features = false }
thiserror = "2.0"
tempfile = "3.14"

[dev-dependencies]
insta = { version = "1.43", features = ["json", "redactions"] }
rstest = "0.26"
