[package]
name = "codspeed-go-runner"
version = "0.6.2"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed-go"
publish = false

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = { version = "0.18", default-features = false }
tempfile = "3.14"
once_cell = "1.21.3"
mimalloc = "0.1.48"
flate2 = "1.1.5"
tar = "0.4.44"
reqwest = { version = "0.13.1", features = ["blocking"] }
rayon = "1.11.0"
itertools = "0.14.0"

[dev-dependencies]
divan = { version = "4.1.0", package = "codspeed-divan-compat" }
insta = { version = "1.43", features = ["json", "redactions"] }
rand = "0.9.2"
rstest = "0.26"
test-log = "0.2.18"

[[bench]]
name = "go_runner"
harness = false
